# youmi-lens

./: .env.example  .env.production  DESIGN.md  README.md  _utf8_test.txt  index.html  package-lock.json  package.json  supabase-beta-quota-update-v0.1.4.sql  supabase-beta-setup.sql  supabase-migration-ai-status.sql  supabase-migration-app-store-subscriptions.sql  supabase-migration-daily-minutes-limit.sql  supabase-migration-profile-display-name-taken-rpc.sql  supabase-migration-profiles.sql  supabase-migration-public-beta-default-quota.sql  supabase-migration-recordings-update-policy-with-check.sql  supabase-migration-signup-codes.sql  supabase-migration-student-basic-consumable.sql  supabase-migration-student-basic-purchasable.sql  supabase-migration-student-basic-revoke-recalculate.sql  supabase-migration-student-pass-entitlements.sql  supabase-migration-transcript-canonical.sql  supabase-migration-transcript-zh.sql  supabase-migration-v1-pipeline-flags.sql  supabase-public-beta-bundle.sql  supabase-setup.sql  supabase-watch-idempotency-key-rollback.sql  supabase-watch-idempotency-key.sql  supabase-watch-rollback.sql  supabase-watch-setup.sql  vite.config.ts  vitest.config.ts
docs/: async-transcribe-minimum-migration.md  brand-guidelines.md  student-pass-api-contract.md  student-pass-migration-preflight.sql  student-pass-phase4-runbook.md  supabase-tauri-auth.md  tauri-desktop-phase0.md  tauri-desktop-trial-p0.md  tauri-readiness.md  youmi-lens-logo-and-icon-usage.md  youmi-lens-main-shell-spec.md
landing/: index.html  script.js  styles.css
scripts/: apply_youmi_shell.py  (+1 more)
server/: index.mjs  (+49 more)
src-tauri/: Cargo.toml  Info.plist  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs
src-tauri/windows/: installer.nsh
(+166 files in other folders)
